Z-index fix

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -372,6 +372,7 @@ select {
     top: -120%;
     left: 0;
     transition: all ease 0.3s;
+    z-index: 10;
 
     &.active {
         top: 0;
